@@ -1,8 +1,10 @@
 package com.camoga.ant.net;
 
+import java.awt.GraphicsEnvironment;
 import java.io.ByteArrayOutputStream;
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
+import java.io.EOFException;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -14,7 +16,7 @@ import java.net.SocketException;
 import java.net.UnknownHostException;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
-import java.util.ArrayList;
+import java.util.ArrayDeque;
 import java.util.Properties;
 import java.util.logging.Logger;
 
@@ -31,7 +33,7 @@ public class Client {
 	
 	static int ASSIGN_SIZE = 50;
 	static long lastResultsTime;
-	static long[] lastAssign = new long[2];
+	volatile static long[] lastAssignTime = new long[2];
 	static long DELAY_BETWEEN_RESULTS = 120000;
 	static int RECONNECT_TIME = 60000;
 	static boolean STOP_ON_DISCONNECT;
@@ -42,7 +44,7 @@ public class Client {
 	public static boolean logged = false;
 	public static String username, password;
 	
-	public static ArrayList<Long>[] assignments = new ArrayList[2];
+	public static ArrayDeque<Long>[] assignments = new ArrayDeque[2];
 	public static ByteArrayOutputStream[] storedrules = new ByteArrayOutputStream[2];
 	
 	public static Client client;
@@ -75,8 +77,8 @@ public class Client {
 //			} else numworkers = 1;
 //		}
 
-		assignments[0] = new ArrayList<Long>();
-		assignments[1] = new ArrayList<Long>();
+		assignments[0] = new ArrayDeque<Long>();
+		assignments[1] = new ArrayDeque<Long>();
 		storedrules[0] = new ByteArrayOutputStream();
 		storedrules[1] = new ByteArrayOutputStream();
 		WorkerManager.setWorkers(normalworkers, hexworkers);
@@ -121,8 +123,8 @@ public class Client {
 	private synchronized static void getAssigment(int type) {
 		if(!logged) return;
 		if(WorkerManager.size(type) == 0) return;
-		if(System.currentTimeMillis()-lastAssign[type] < 15000) return;
-		lastAssign[type] = System.currentTimeMillis();
+		if(System.currentTimeMillis()-lastAssignTime[type] < 15000) return;
+		lastAssignTime[type] = System.currentTimeMillis();
 		try {
 			if(type == 0) os.write(PacketType.GETASSIGNMENT.getId());
 			else os.write(PacketType.GETHEXASSIGN.getId());
@@ -150,7 +152,10 @@ public class Client {
 				storedrules[1].reset();
 				datasent = true;
 			}
-			if(datasent) LOG.info("Data sent to server");
+			if(datasent) {
+				if(username.equalsIgnoreCase("pazvi")) LOG.info("Sent data to server");
+				else LOG.info("Data sent to server");
+			}
 		} catch(IOException e) {
 			LOG.warning("Could not send rules to server");
 		}
@@ -158,27 +163,7 @@ public class Client {
 		lastResultsTime = System.currentTimeMillis();
 	}
 	
-//	FileChannel fc;
-	private void run() {
-
-//		System.out.println(Runtime.getRuntime().availableProcessors());
-//		try {
-//			fc = FileChannel.open(new File("langton.properties").toPath(), StandardOpenOption.CREATE, StandardOpenOption.WRITE);
-//			FileLock lock = fc.tryLock();
-//			if(lock == null) {
-//				LOG.info("Another instance is running");
-//				System.exit(0);
-//			}
-//		} catch (IOException e) {
-//			LOG.info("Another instance is running");
-//			System.exit(0);
-//		}
-//		File file = new File("langton.properties");
-//		if(!file.delete()) {
-//			LOG.info("Another instance is running");
-//			System.exit(0);
-//		}
-				
+	private void run() {	
 		lastResultsTime = System.currentTimeMillis();
 		while(!STOP_ON_DISCONNECT) {
 			try {
@@ -193,7 +178,7 @@ public class Client {
 				} else if(properties.getProperty("username") != null && properties.getProperty("hash") != null) {
 					login(properties.getProperty("username"), new BigInteger(Client.properties.getProperty("hash"),16).toString(16));
 				}
-			
+
 				while(true) {
 					switch(PacketType.getPacketType(is.readByte())) {
 					case AUTH:
@@ -251,6 +236,9 @@ public class Client {
 				} catch (InterruptedException e1) {
 					e1.printStackTrace();
 				}
+			} catch(EOFException e) {
+				LOG.warning("Connection lost");
+				logged = false;
 			} catch (IOException e) {
 				e.printStackTrace();
 			} 
@@ -268,9 +256,10 @@ public class Client {
 	
 	public static void main(String[] args) throws IOException {
 		host = "langtonsant.sytes.net";
-		boolean gui = true;
+		boolean gui = !GraphicsEnvironment.isHeadless();
 		boolean nolog = false;
-		int numworkers = -1;
+		int normalworkers = 1;
+		int hexworkers = 0;
 		String username = "";
 		String password = "";
 		for(int i = 0; i < args.length; i++) {
@@ -286,10 +275,10 @@ public class Client {
 					nolog = true;
 					break;
 				case "-w":
-					String param = args[++i];
-					if(param.equalsIgnoreCase("max")) {
-						numworkers = Runtime.getRuntime().availableProcessors();
-					} else numworkers = Integer.parseInt(param);
+					normalworkers = Integer.parseInt(args[++i]);
+					break;
+				case "-wh":
+//					hexworkers = Integer.parseInt(args[++i]);
 					break;
 				case "-sd":
 					STOP_ON_DISCONNECT = true;
@@ -303,23 +292,40 @@ public class Client {
 				}
 		}
 		
-		client = new Client(numworkers,0, nolog);
+		client = new Client(normalworkers,hexworkers,nolog);
 		if(gui)
 			new Window();
+	}
+	
+	//TODO synchronized removeFirst
+	public static long[] getRules(int type, int size) {
+		if(assignments[type].size() < 2*size) {
+			getAssigment(type);
+			return null;
+		}
+		long[] rules = new long[size*2];
+		for(int i = 0; i < size; i++) {
+			rules[i] = assignments[type].removeFirst();
+		}
+		return rules;
 	}
 	
 	public synchronized static long[] getRule(int type) {
 		if(assignments[type].size() < 2*WorkerManager.size()*ASSIGN_SIZE) {
 			getAssigment(type);
-			if(assignments[type].size() == 0) return new long[] {-1};
+			if(assignments[type].size() == 0) return null;
 		}
-		long[] p = new long[] {assignments[type].remove(0), assignments[type].remove(0)};
+		long[] p = new long[] {assignments[type].removeFirst(), assignments[type].removeFirst()};
 		return p;
 	}
 	
-	public synchronized static void storeRule(int type, long[] rule) {
+	public synchronized static void storeRules(int type, long[] rule) {
 		try {
-			storedrules[type].write(ByteBuffer.allocate(24).putLong(rule[0]).putLong(rule[1]).putLong(rule[2]).array());
+			ByteBuffer bb = ByteBuffer.allocate(8*rule.length);
+			for(int i = 0; i < rule.length; i++) {
+				bb.putLong(rule[i]);
+			}
+			storedrules[type].write(bb.array());
 			sendAssignmentResult();
 		} catch (IOException e) {
 			e.printStackTrace();
